# mcpo

./: .env.example  .gitignore  Dockerfile  README.md  config.json.example  docker-compose.yml  pyproject.toml
.clinefules/: README.md  fetch.md  setup.md  testing.md  usage.md
config/: config.json.example
src/mcpo/: main.py
src/mcpo/mcp_servers/memory/: Dockerfile  README.md  main.py  requirements.txt
